force-app/main/default/objects/Strategic_Account_Plan__c/Strategic_Account_Plan__c.object-meta.xml
<CustomObject>
    <description>Strategic Account Plan</description>
    <label>Strategic Account Plan</label>
    <nameField>
        <label>Strategic Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Account Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>