force-app/main/default/objects/Strategic_Account_Plan__c/fields/Account_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Activity__c</fullName>
    <formula>Account__r.LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Last Activity</label>
    <type>Date</type>
</CustomField>