force-app/main/default/objects/Strategic_Account_Plan__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Strategic_Account_Plans7</relationshipName>
    <type>Lookup</type>
</CustomField>