force-app/main/default/objects/Strategic_Account_Plan__c/fields/Account_Summary__c.field-meta.xml
<CustomField>
    <fullName>Account_Summary__c</fullName>
    <label>Account Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>