force-app/main/default/objects/Strategic_Account_Plan__c/fields/CAM_Manager__c.field-meta.xml
<CustomField>
    <fullName>CAM_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account CAM Manager</description>
    <label>CAM Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Strategic_Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>