force-app/main/default/objects/Strategic_Account_Plan__c/fields/CAM_Support__c.field-meta.xml
<CustomField>
    <fullName>CAM_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAM Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Strategic_Account_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>