force-app/main/default/objects/Strategic_Account_Plan__c/fields/Capacity_10__c.field-meta.xml
<CustomField>
    <fullName>Capacity_10__c</fullName>
    <label>Capacity</label>
    <type>TextArea</type>
</CustomField>