force-app/main/default/objects/Strategic_Account_Plan__c/fields/CleanHarbors_Strategic_Vision__c.field-meta.xml
<CustomField>
    <fullName>CleanHarbors_Strategic_Vision__c</fullName>
    <inlineHelpText>What Is Our Strategic Vision for the Account</inlineHelpText>
    <label>Clean Harbors Strategic Vision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>