force-app/main/default/objects/Strategic_Account_Plan__c/fields/Complete_Quantitative_Objective_2__c.field-meta.xml
<CustomField>
    <fullName>Complete_Quantitative_Objective_2__c</fullName>
    <formula>Current_Status_Quantitative_Objective2__c / Goal_Quantitative_Objective_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete - Quantitative Objective 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>