force-app/main/default/objects/Strategic_Account_Plan__c/fields/Current_Status_Quantitative_Objective1__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Quantitative_Objective1__c</fullName>
    <label>Current Status - Quantitative Objective1</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>