force-app/main/default/objects/Strategic_Account_Plan__c/fields/Customer_Contract_3__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contract_3__c</fullName>
    <label>Customer Contract # 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>