force-app/main/default/objects/Strategic_Account_Plan__c/fields/Customer_s_Strategic_Vision__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Strategic_Vision__c</fullName>
    <inlineHelpText>What is the Customer&apos;s Strategic Vision?</inlineHelpText>
    <label>Customer&apos;s Strategic Vision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>