force-app/main/default/objects/Strategic_Account_Plan__c/fields/Environmental_Matters__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Matters__c</fullName>
    <description>Customer Matters</description>
    <inlineHelpText>Customer Matters Based on 10k</inlineHelpText>
    <label>Environmental Matters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>