force-app/main/default/objects/Strategic_Account_Plan__c/fields/Goal_Quantitative_Objective_2__c.field-meta.xml
<CustomField>
    <fullName>Goal_Quantitative_Objective_2__c</fullName>
    <label>Goal - Quantitative Objective 2</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>