force-app/main/default/objects/Strategic_Account_Plan__c/fields/Historical_Revenue_Trend__c.field-meta.xml
<CustomField>
    <fullName>Historical_Revenue_Trend__c</fullName>
    <label>Historical Revenue Trend</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>