force-app/main/default/objects/Strategic_Account_Plan__c/fields/Internal_Supporter_Role_1__c.field-meta.xml
<CustomField>
    <fullName>Internal_Supporter_Role_1__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Management Support</fullName>
            </value>
            <value>
                <fullName>Sales Specialist</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>