force-app/main/default/objects/Strategic_Account_Plan__c/fields/Internal_Supporter_User_1__c.field-meta.xml
<CustomField>
    <fullName>Internal_Supporter_User_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Supporter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Strategic_Account_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>