force-app/main/default/objects/Strategic_Account_Plan__c/fields/Location_10__c.field-meta.xml
<CustomField>
    <fullName>Location_10__c</fullName>
    <label>Location # 10</label>
    <type>TextArea</type>
</CustomField>