force-app/main/default/objects/Strategic_Account_Plan__c/fields/Location_11__c.field-meta.xml
<CustomField>
    <fullName>Location_11__c</fullName>
    <label>Location # 11</label>
    <type>TextArea</type>
</CustomField>