force-app/main/default/objects/Strategic_Account_Plan__c/fields/Location_12__c.field-meta.xml
<CustomField>
    <fullName>Location_12__c</fullName>
    <label>Location # 12</label>
    <type>TextArea</type>
</CustomField>