force-app/main/default/objects/Strategic_Account_Plan__c/fields/Name_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Name_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; CASESAFEID(Id), Name, &quot;_self&quot;)</formula>
    <label>Name Hyperlink</label>
    <type>Text</type>
</CustomField>