force-app/main/default/objects/Strategic_Account_Plan__c/fields/Qualitative_Objective_3__c.field-meta.xml
<CustomField>
    <fullName>Qualitative_Objective_3__c</fullName>
    <description>Qualitative Objectives for the Account</description>
    <label>Qualitative Objective - 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>