force-app/main/default/objects/Strategic_Account_Plan__c/fields/Quantitative_Objective_2__c.field-meta.xml
<CustomField>
    <fullName>Quantitative_Objective_2__c</fullName>
    <description>Quantitative Objectives for the Account</description>
    <label>Quantitative Objective - 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>