force-app/main/default/objects/Strategic_Account_Plan__c/fields/Status_Qualitative_Objective_2__c.field-meta.xml
<CustomField>
    <fullName>Status_Qualitative_Objective_2__c</fullName>
    <label>Status - Qualitative Objective - 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Qualitative_Objective_Status</valueSetName>
    </valueSet>
</CustomField>