force-app/main/default/objects/Strategic_Account_Plan__c/fields/Total_Current_Year_plus_1_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Year_plus_1_Forecast__c</fullName>
    <label>Total Current Year plus 1 Forecast</label>
    <summarizedField>Strategy_Plan_Forecast_Competitor_Info__c.Current_Year_plus_1_Forecast__c</summarizedField>
    <summaryForeignKey>Strategy_Plan_Forecast_Competitor_Info__c.Strategic_Account_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>