force-app/main/default/objects/Strategic_Account_Plan__c/fields/Total_FY_Current_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_FY_Current_Spend__c</fullName>
    <label>Total FY Current Spend</label>
    <summarizedField>Strategy_Plan_Forecast_Competitor_Info__c.FY_Current_Spend__c</summarizedField>
    <summaryForeignKey>Strategy_Plan_Forecast_Competitor_Info__c.Strategic_Account_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>