force-app/main/default/objects/Strategic_Account_Plan__c/fields/Total_of_FY_Total_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Total_of_FY_Total_Wallet__c</fullName>
    <label>Total of FY Total Wallet</label>
    <summarizedField>Strategy_Plan_Forecast_Competitor_Info__c.FY_Total_Wallet__c</summarizedField>
    <summaryForeignKey>Strategy_Plan_Forecast_Competitor_Info__c.Strategic_Account_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>