force-app/main/default/objects/Strategic_Account_Plan__c/fields/Total_Percentage_of_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Total_Percentage_of_Wallet__c</fullName>
    <formula>Total_Current_Year_Forecast__c / Total_of_FY_Total_Wallet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total % of Wallet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>