force-app/main/default/objects/Strategic_Account_Plan__c/fields/WinId_12__c.field-meta.xml
<CustomField>
    <fullName>WinId_12__c</fullName>
    <label>Win Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>