force-app/main/default/objects/Strategic_Account_Plan__c/fields/YOY_Revenue_Report__c.field-meta.xml
<CustomField>
    <fullName>YOY_Revenue_Report__c</fullName>
    <label>YOY Revenue Report</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>