force-app/main/default/objects/Strategic_Account_Plan__c/recordTypes/Corporate_Strategic_Account_Plan.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Strategic_Account_Plan</fullName>
    <active>true</active>
    <description>Plan for Corporate Account</description>
    <label>Corporate Strategic Account Plan</label>
</RecordType>