force-app/main/default/objects/Strategic_Account_Plan__c/recordTypes/Customer_Strategic_Account_Plan.recordType-meta.xml
<RecordType>
    <fullName>Customer_Strategic_Account_Plan</fullName>
    <active>true</active>
    <description>Plan for Customer Account</description>
    <label>Customer Strategic Account Plan</label>
</RecordType>